BE: handle payment cards
